# bagging-boosting-stacking-study

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: airfoil_self_noise.csv  energy_efficiency.csv  friedman1.csv  friedman3.csv  regression.csv
data/raw/: airfoil_self_noise.csv  energy_efficiency.csv
notebooks/eda/: airfoil_self_noise_eda.ipynb  california_housing_eda.ipynb  energy_efficiency_eda.ipynb  friedman1_eda.ipynb  friedman3_eda.ipynb  regression_eda.ipynb
notebooks/ensemble_comparison/: ensemble_comparison.ipynb
plots/: airfoil_self_noise_summary.csv  master_summary_models.csv  regression_summary.csv  statistical_tests_holm.csv
results/: airfoil_self_noise_feature_importances.csv  airfoil_self_noise_flat_bank.csv  airfoil_self_noise_stat_tests.csv  airfoil_self_noise_summary.csv  all_stat_tests.csv  california_housing_feature_importances.csv  california_housing_flat_bank.csv  california_housing_stat_tests.csv  california_housing_summary.csv  energy_efficiency_feature_importances.csv  energy_efficiency_flat_bank.csv  energy_efficiency_stat_tests.csv  energy_efficiency_summary.csv  feature_rank.csv  friedman1_feature_importances.csv  friedman1_flat_bank.csv  friedman1_stat_tests.csv  friedman1_summary.csv  friedman3_feature_importances.csv  friedman3_flat_bank.csv  friedman3_stat_tests.csv  friedman3_summary.csv  model_winners.csv  regression_feature_importances.csv  regression_flat_bank.csv  regression_stat_tests.csv  regression_summary.csv  statistical_tests_holm.csv  top_features_by_dataset_model.csv
tests/: test_loaders.py
(+38 files in other folders)
